Fabric 1.21.1: data migration — 3375 recipes load
1.21 folder renames across all namespaces (recipe/advancement/loot_table/
structure/tag singulars), forge: tags merged into the c: convention,
Forge-dialect conditions evaluated at load via RecipeManager/
ServerAdvancementManager mixins (incl. forge:conditional unwrap), the
recipe-ID ThreadLocal seam (1722 parse failures -> 2), vanilla result/
icon/ingredient format moves with fabric:any wrapping for customs in
value arrays, ShapedMaterial family + mantle retextured/fallback recipes
rewritten onto ShapedRecipePattern, loot function renames + fresh
fill_retextured_block, attribute operation renames (modifier fails
75 -> 39). Remaining: milk fluid (phase 6), enchantment loadable +
parked capability loaders (their passes).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>