@@ -1,28 +1,29 @@
 package slimeknights.mantle.recipe.crafting;
 
-import com.google.gson.JsonObject;
-import net.minecraft.core.NonNullList;
-import net.minecraft.network.RegistryFriendlyByteBuf;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.world.inventory.CraftingContainer;
-import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.CraftingBookCategory;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.world.item.crafting.CraftingInput;
 import net.minecraft.world.item.crafting.CraftingRecipe;
-import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.RecipeManager;
 import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.item.crafting.ShapelessRecipe;
 import net.minecraft.world.level.Level;
-import slimeknights.mantle.data.loadable.Loadables;
 import slimeknights.mantle.recipe.MantleRecipes;
-import slimeknights.mantle.util.JsonHelper;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+/**
+ * Shaped recipe that fails to match whenever one of its alternative recipes matches.
+ *
+ * <p>1.21 reshape: the vanilla shaped map codec is embedded for the base keys and the
+ * alternatives ride along as an extra field; matching works on {@link CraftingInput}.
+ */
 @SuppressWarnings("WeakerAccess")
 public class ShapedFallbackRecipe extends ShapedRecipe {
 
@@ -31,32 +32,17 @@ public class ShapedFallbackRecipe extends ShapedRecipe {
   private List<CraftingRecipe> alternativeCache;
 
   /**
-   * Main constructor, creates a recipe from all parameters
-   * @param id             Recipe ID
-   * @param group          Recipe group
-   * @param width          Recipe width
-   * @param height         Recipe height
-   * @param ingredients    Recipe input ingredients
-   * @param output         Recipe output
-   * @param alternatives   List of recipe names to fail this match if they match
-   */
-  public ShapedFallbackRecipe(ResourceLocation id, String group, CraftingBookCategory category, int width, int height, NonNullList<Ingredient> ingredients, ItemStack output, List<ResourceLocation> alternatives) {
-    super(id, group, category, width, height, ingredients, output);
-    this.alternatives = alternatives;
-  }
-
-  /**
    * Creates a recipe using a shaped recipe as a base
    * @param base          Shaped recipe to copy data from
    * @param alternatives  List of recipe names to fail this match if they match
    */
   public ShapedFallbackRecipe(ShapedRecipe base, List<ResourceLocation> alternatives) {
-    super(base.getId(), base.getGroup(), base.category(), base.getWidth(), base.getHeight(), base.getIngredients(), base.result, base.showNotification());
+    super(base.getGroup(), base.category(), base.pattern, base.result, base.showNotification());
     this.alternatives = alternatives;
   }
 
   @Override
-  public boolean matches(CraftingContainer inv, Level world) {
+  public boolean matches(CraftingInput inv, Level world) {
     // if this recipe does not match, fail it
     if (!super.matches(inv, world)) {
       return false;
@@ -69,15 +55,15 @@ public class ShapedFallbackRecipe extends ShapedRecipe {
       alternativeCache = alternatives.stream()
                                      .map(manager::byKey)
                                      .filter(Optional::isPresent)
-                                     .map(Optional::get)
+                                     .map(holder -> holder.get().value())
                                      .filter(recipe -> {
                                        // only allow exact shaped or shapeless match, prevent infinite recursion due to complex recipes
                                        Class<?> clazz = recipe.getClass();
                                        return clazz == ShapedRecipe.class || clazz == ShapelessRecipe.class;
                                      })
-                                     .map(recipe -> (CraftingRecipe) recipe).collect(Collectors.toList());
+                                     .map(recipe -> (CraftingRecipe) recipe).toList();
     }
-    // fail if any alterntaive matches
+    // fail if any alternative matches
     return this.alternativeCache.stream().noneMatch(recipe -> recipe.matches(inv, world));
   }
 
@@ -86,36 +72,40 @@ public class ShapedFallbackRecipe extends ShapedRecipe {
     return MantleRecipes.CRAFTING_SHAPED_FALLBACK.get();
   }
 
-  public static class Serializer extends ShapedRecipe.Serializer {
-    @Override
-    public ShapedFallbackRecipe fromJson(ResourceLocation id, JsonObject json) {
-      ShapedRecipe base = super.fromJson(id, json);
-      List<ResourceLocation> alternatives = JsonHelper.parseList(json, "alternatives", Loadables.RESOURCE_LOCATION);
-      return new ShapedFallbackRecipe(base, alternatives);
-    }
+  public static class Serializer implements RecipeSerializer<ShapedFallbackRecipe> {
+    private static final MapCodec<ShapedFallbackRecipe> CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
+      RecipeSerializer.SHAPED_RECIPE.codec().forGetter(recipe -> recipe),
+      ResourceLocation.CODEC.listOf().fieldOf("alternatives").forGetter(recipe -> recipe.alternatives)
+    ).apply(instance, ShapedFallbackRecipe::new));
 
-    @Override
-    public ShapedFallbackRecipe fromNetwork(ResourceLocation id, RegistryFriendlyByteBuf buffer) {
-      ShapedRecipe base = super.fromNetwork(id, buffer);
+    private static final StreamCodec<RegistryFriendlyByteBuf, ShapedFallbackRecipe> STREAM_CODEC = StreamCodec.of(Serializer::toNetwork, Serializer::fromNetwork);
+
+    private static ShapedFallbackRecipe fromNetwork(RegistryFriendlyByteBuf buffer) {
+      ShapedRecipe base = RecipeSerializer.SHAPED_RECIPE.streamCodec().decode(buffer);
       int size = buffer.readVarInt();
-      List<ResourceLocation> builder = new ArrayList<>(size);
+      List<ResourceLocation> alternatives = new ArrayList<>(size);
       for (int i = 0; i < size; i++) {
-        builder.add(buffer.readResourceLocation());
+        alternatives.add(buffer.readResourceLocation());
       }
-      return new ShapedFallbackRecipe(base, List.copyOf(builder));
+      return new ShapedFallbackRecipe(base, List.copyOf(alternatives));
     }
 
-    @Override
-    public void toNetwork(RegistryFriendlyByteBuf buffer, ShapedRecipe recipe) {
-      // write base recipe
-      super.toNetwork(buffer, recipe);
-      // write extra data
-      assert recipe instanceof ShapedFallbackRecipe;
-      List<ResourceLocation> alternatives = ((ShapedFallbackRecipe) recipe).alternatives;
-      buffer.writeVarInt(alternatives.size());
-      for (ResourceLocation alternative : alternatives) {
+    private static void toNetwork(RegistryFriendlyByteBuf buffer, ShapedFallbackRecipe recipe) {
+      RecipeSerializer.SHAPED_RECIPE.streamCodec().encode(buffer, recipe);
+      buffer.writeVarInt(recipe.alternatives.size());
+      for (ResourceLocation alternative : recipe.alternatives) {
         buffer.writeResourceLocation(alternative);
       }
+    }
+
+    @Override
+    public MapCodec<ShapedFallbackRecipe> codec() {
+      return CODEC;
+    }
+
+    @Override
+    public StreamCodec<RegistryFriendlyByteBuf, ShapedFallbackRecipe> streamCodec() {
+      return STREAM_CODEC;
     }
   }
 }
